--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <name>HandcraftedBits License Header Support</name>
   <description>Support files and code for default HandcraftedBits license headers</description>
   <url>https://github.com/handcraftedbits/handcraftedbits-license</url>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <inceptionYear>2016</inceptionYear>
   
   <developers>
